# oran-metrics-cli

./: Dockerfile  Dockerfile.nonrt  README.md  docker-compose.yaml  pyproject.toml
examples/: config.yaml  formats_demo.py  gnb_data.json  gnb_data.yaml
proto/: e2_message.py
scripts/: demo_two_rics.py  phase2_capstone.sh  run_two_rics.sh
src/oran_metrics/: __init__.py  calculator.py  cli.py  config_runner.py
src/oran_metrics/api/: message_broker.py  nonrt_ric.py  ric_server.py  xapp_client.py
tests/: test_api.py  test_calculator.py  test_config_runner.py
