[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oran-metrics-cli"
version = "0.1.0"
description = "CLI tool for O-RAN network metric calculations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Deepak Singh", email = "getdeep001@gmail.com"},
]
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
oran-metrics = "oran_metrics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
